update jax with gpus

--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,38 +1,15 @@
-FROM nvidia/cuda:11.2.0-runtime-ubuntu18.04
+FROM nvidia/cuda:11.4.1-cudnn8-runtime-ubuntu20.04
 
-LABEL name="pymc"
-LABEL version="4.0"
-LABEL description="Environment for PyMC version 4"
+LABEL name="pymc-gpu"
+LABEL version="4.0.0"
+LABEL description="Environment for PyMC version 4.0.0 on GPUs"
 
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
 
 USER root
 
-# # Install all OS dependencies for fully functional notebook server
-# RUN apt-get update && apt-get install -yq --no-install-recommends \
-#     build-essential \
-#     emacs-nox \
-#     vim-tiny \
-#     git \
-#     inkscape \
-#     jed \
-#     libsm6 \
-#     libxext-dev \
-#     libxrender1 \
-#     lmodern \
-#     netcat \
-#     python-dev \
-#     # ---- nbconvert dependencies ----
-#     texlive-xetex \
-#     texlive-fonts-recommended \
-#     texlive-plain-generic \
-#     # ----
-#     tzdata \
-#     unzip \
-#     nano \
-#     && apt-get clean && rm -rf /var/lib/apt/lists/*
-
-RUN apt-get update --fix-missing && apt-get install -y wget bzip2 ca-certificates \
+RUN apt-get update --fix-missing && \
+    DEBIAN_FRONTEND="noninteractive" apt-get install -y wget bzip2 ca-certificates \
     libglib2.0-0 \
     libxext6 \
     libsm6 \
@@ -46,13 +23,6 @@ RUN apt-get update --fix-missing && apt-get install -y wget bzip2 ca-certificate
     libfreetype6-dev \
     libzmq3-dev \
     pkg-config \
-    python3-pip \
-    python3-dev \
-    # ---- nbconvert dependencies ----
-    texlive-xetex \
-    texlive-fonts-recommended \
-    texlive-plain-generic \
-    # ----
     rsync \
     software-properties-common \
     unzip \
@@ -60,17 +30,30 @@ RUN apt-get update --fix-missing && apt-get install -y wget bzip2 ca-certificate
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-RUN apt-get install python3.9
+ENV CONDA_DIR /opt/conda
+RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && \
+    /bin/bash ~/miniconda.sh -b -p /opt/conda
+# Put conda in path so we can use conda activate
+ENV PATH=$CONDA_DIR/bin:$PATH
 
 # Switch back to jovyan to avoid accidental container runs as root
-
 USER $NB_UID
-ENV SHELL=/bin/bash
 
-RUN python3 -m pip install --upgrade pip setuptools wheel
+COPY environment.yml .
+RUN conda install -c conda-forge mamba \
+    && mamba env create -f environment.yml \
+    && conda clean --all -f -y
 
-COPY requirements.txt .
-RUN pip3 install -r requirements.txt
+RUN /bin/bash -c ". activate pymc && \
+    pip install --upgrade pip && \ 
+    pip install --upgrade 'jax[cuda]' -f https://storage.googleapis.com/jax-releases/jax_releases.html"
 
-# Start jupyter notebook
-ENTRYPOINT ["jupyter", "notebook", "--allow-root", "--ip=0.0.0.0"]
+WORKDIR "/home/jovyan"
+
+SHELL ["/bin/bash","-c"]
+RUN conda init \
+    && echo 'conda activate pymc' >> ~/.bashrc
+
+EXPOSE 8888
+
+CMD ["conda", "run", "--no-capture-output", "-n", "pymc", "jupyter","notebook","--ip=0.0.0.0","--port=8888","--no-browser","--allow-root"]
